[gd_scene load_steps=9 format=3 uid="uid://tnkbbu4r0pt4"]

[ext_resource type="Script" uid="uid://ctjscio5i6hcv" path="res://Script/enemy.gd" id="1_qoo5l"]
[ext_resource type="Texture2D" uid="uid://b0jf84ylu3im5" path="res://2Ds/Brigadeiro.png" id="2_qoo5l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xaro"]
size = Vector2(26, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ype4"]
atlas = ExtResource("2_qoo5l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t4sj"]
atlas = ExtResource("2_qoo5l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xuxq"]
atlas = ExtResource("2_qoo5l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3yqyl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ype4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t4sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xuxq")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_7k104"]
radius = 12.0

[node name="Brigadeiro" type="CharacterBody2D"]
script = ExtResource("1_qoo5l")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_7xaro")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3yqyl")
autoplay = "default"
frame_progress = 0.5479566

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="FrontCheck" type="RayCast2D" parent="."]
target_position = Vector2(-30, 0)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_7k104")
debug_color = Color(0.9953061, 0, 0.21541578, 0.41960785)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
